syntax = "proto3";

package mypackage;

service MyService {
  rpc GetData (DataRequest) returns (DataResponse) {}
}

message DataRequest {
  string id = 1;
}

message DataResponse {
  string data = 1;
}